[tool.pdm]

[project]
name = "llpy-helper-lib"
version = "0.0.1.dev3"
description = "Helper Lib for LLSE Python Runtime"
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["ruff>=0.0.257", "black>=23.1.0", "isort>=5.12.0"]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.ruff]
extend-exclude = []
ignore = [
    "E501",
    "E722",
    "TRY002",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF100",
    "TID252",
    # 下面的是特殊需要
    "ARG001",
    "A003",
    "N801",
    "N802",
    "N815",
    "N816",
]
# per-file-ignores = { "*.py" = ["F821"] }
select = [
    "F",
    "E",
    "I",
    "N",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PGH",
    "TRY",
    "RUF",
]
